1.0.0b5
-------

 - Use relative paths in build json files
 - Revert calls-as-transactions when evaluating coverage

1.0.0b4
-------

 - Add broadcast_reverting_tx flag
 - Use py-solc-x 0.4.0
 - Detect and attach to an already active RPC client, better verbosity on RPC exceptions
 - introduce Singleton metaclass and refactor code to take advantage
 - add EventDict and EventItem classes for transaction event logs
 - cli.color, add _print_as_dict _print_as_list _dir_color attributes
 - add conversion methods in types.convert
 - remove brownie.utils package, move modules to network and project packages
 - bugfixes and minor changes

1.0.0b3
-------

 - major code re-organization and refactoring
 - allow skipping contracts with _
 - modify test coverage file format
 - merge test and coverage components of cli
 - only run tests / coverage evaluation if related files have changed
 - integrate opview as brownie gui
 - many bugfixes and minor changes


1.0.0b2
-------

 - add compile command to cli
 - bugfix in pypi package requirements
 - show numbers on skipped and failing tests

1.0.0b1
-----

 - major code re-organization, brownie now works as a package and is installable via pip
 - remove os.path in favor of pathlib.Path - allow Windows support
 - rebuild brownie console, use compile to check for completed statements
 - remove Accounts.mnemonic
 - transaction.history is now a custom data class
 - save and load accounts using standard encrypted keystore files
 - add brownie bake to initialize projects from template
 - many bugfixes and minor changes

0.9.6 (unreleased)
-----

 - show source highlight when check.reverts fails with wrong message

0.9.5
-----

 - check.true and check.false require booleans to pass
 - Allow subfolders within tests/
 - Only run specific tests within a file
 - More efficient transaction stack trace analysis
 - Improvements to compiler efficiency and functionality
 - account.transfer accepts data
 - add ContractTx.encode_abi