@@ -209,4 +209,9 @@ Module Methods
 
 .. py:method:: coverage.merge_coverage(coverage_files)
 
-    Given a list of coverage file paths, returns a single aggregated coverage report. Used by ``cli.test`` and ``gui.root`` to display coverage information.
+    Given a list of coverage file paths, returns a single aggregated coverage report.
+
+.. py:method:: coverage.generate_report(coverage_eval)
+
+
+    Given a coverage report as generated by ``analyze_coverage`` or ``merge_coverage``, returns a generic highlight report suitable for display within the Brownie GUI.
